just scrollbar corrections

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,19 +7,20 @@ body {
 }
 
 html::-webkit-scrollbar {
-    width: 1.5vw;
+    width: 1vw;
     
   }
 
   html::-webkit-scrollbar-thumb {
     background-color: #333;
     border-radius: .5vw;
-    box-shadow: inset 0 0 0.7vw grey;
+    box-shadow: inset 0 0 0.3vw #888;
   }
 
   html::-webkit-scrollbar-thumb:hover {
-    background-color: #888;
-
+    background-color: #666;
+    box-shadow: inset 0 0 .5vw #222;
+    border-radius: 5vw;
   }
 
   html::-webkit-scrollbar-track {
